--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React интенсив</title>
+    <link rel="icon" href="/logo.svg" type="image/svg+xml">
+    <title>React Intensive</title>
   </head>
   <body>
     <div id="root"></div>
